--- a/src/assets/scss/pages/category/include/categoryright.scss
+++ b/src/assets/scss/pages/category/include/categoryright.scss
@@ -55,8 +55,8 @@
         .tabs-list {
             display: inline-block;
             list-style: none;
-            padding: 0px;
-            margin: 0px;
+            padding: 0;
+            margin: 0;
 
             @media (max-width: 1024px) {
                 width: 100%;
@@ -75,7 +75,7 @@
                 display: inline-block;
                 font-size: 14px;
                 padding: 12px 16px;
-
+                position: relative;
                 @media (max-width: 1024px) {
                     justify-content: space-between;
                 }
