--- a/src/assets/scss/pages/category/include/sidebar.scss
+++ b/src/assets/scss/pages/category/include/sidebar.scss
@@ -42,11 +42,14 @@
 
             a {
                 color: rgb(56, 56, 61);
+                display: block;
+                padding: 5px 0;
             }
 
             a:hover {
                 background-color: transparent;
                 cursor: pointer;
+                color: #e91e63;
             }
     }
 
