--- a/src/assets/scss/pages/home/include/product.scss
+++ b/src/assets/scss/pages/home/include/product.scss
@@ -2,124 +2,129 @@
     background: rgb(245, 245, 250);
     margin-top: 16px;
     border-radius: 4px;
-  
-    &__title {
-      display: flex;
-      background: rgb(245, 245, 250);
-      border-radius: 4px 4px 0px 0px;
-      flex-direction: column;
 
-      position: sticky;
+    &__title {
+        display: flex;
+        background: rgb(245, 245, 250);
+        border-radius: 4px 4px 0px 0px;
+        flex-direction: column;
+
+        position: sticky;
         top: 1px;
         z-index: 998;
-  
-      h2 {
-        display: flex;
-        padding: 10px 16px;
-        background-color: white;
-        flex: 1 1 0%;
-        font-size: 20px;
-        line-height: 28px;
-        text-transform: capitalize;
-        margin-bottom: 4px;
-        border-radius: 4px;
-        font-weight: initial;
-      }
-  
-      &-list {
-        display: grid;
-        margin-bottom: 4px;
-        overflow: auto;
-        position: relative;
-        grid-template-columns: repeat(8, 1fr);
-        column-gap: 4px;
-  
-        .tab {
-          border: 1px solid white;
-          background-color: white;
-          display: flex;
-          flex-direction: column;
-          -webkit-box-align: center;
-          align-items: center;
-          flex-shrink: 0;
-          cursor: pointer;
-          min-height: 78px;
-          border-radius: 4px;
-          padding: 4px 8px;
-  
-          img {
-            transition: all 0.4s ease 0s;
-            border-radius: 4px;
-            width: 48px;
-          }
-  
-          &-text {
-            padding-top: 4px;
-            line-height: 18px;
-            text-align: center;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 1;
-            overflow: hidden;
-            display: -webkit-box;
-            word-break: break-word;
-            color: rgb(120, 120, 120);
-          }
-        }
-        .tab.active {
-          border: 1px solid rgb(13, 92, 182);
-  
-          .tab-text {
-            color: rgb(13, 92, 182);
-          }
-        }
-      }
-    }
-    &__product {
-      display: flex;
-      flex-direction: column;
-      -webkit-box-align: center;
-      align-items: center;
-      background: white;
-      padding: 0px 0px 16px;
-      border-radius: 0px 0px 4px 4px;
-  
-      .content {
-        display: flex;
-        flex-wrap: wrap;
-        align-self: stretch;
-        background-color: rgb(255, 255, 255);
-        border-top: 1px solid rgb(242, 242, 242);
-  
-        .dashboard-product--item {
-          width: 16.6667%;
-        }
-      }
-      .view-more {
-        display: inline-block;
-        width: 240px;
-        padding: 8px 12px;
-        border-radius: 4px;
-        border: 1px solid rgb(13, 92, 182);
-        color: rgb(13, 92, 182);
-        font-size: 13px;
-        text-align: center;
-        margin-top: 12px;
-        font-weight: 500;
-      }
-      .view-more:hover {
-        cursor: pointer;
-        border-radius: 4px;
-        border: 1px solid rgb(13, 92, 182);
-        color:#fff;
-        background-color: rgb(13, 92, 182);
-      }
-    }
-    @media (max-width: 1024px) {
-          min-height: 500px;
-          background: white;
-          margin-top: 8px;
 
-          h2 {
+        h2 {
+            display: flex;
+            padding: 10px 16px;
+            background-color: white;
+            flex: 1 1 0%;
+            font-size: 20px;
+            line-height: 28px;
+            text-transform: capitalize;
+            margin-bottom: 4px;
+            border-radius: 4px;
+            font-weight: initial;
+        }
+
+        &-list {
+            display: grid;
+            margin-bottom: 4px;
+            overflow: auto;
+            position: relative;
+            grid-template-columns: repeat(8, 1fr);
+            column-gap: 4px;
+
+            .tab {
+                border: 1px solid white;
+                background-color: white;
+                display: flex;
+                flex-direction: column;
+                -webkit-box-align: center;
+                align-items: center;
+                flex-shrink: 0;
+                cursor: pointer;
+                min-height: 78px;
+                border-radius: 4px;
+                padding: 4px 8px;
+
+                img {
+                    transition: all 0.4s ease 0s;
+                    border-radius: 4px;
+                    width: 48px;
+                }
+
+                &-text {
+                    padding-top: 4px;
+                    line-height: 18px;
+                    text-align: center;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 1;
+                    overflow: hidden;
+                    display: -webkit-box;
+                    word-break: break-word;
+                    color: rgb(120, 120, 120);
+                }
+            }
+
+            .tab.active {
+                border: 1px solid rgb(13, 92, 182);
+
+                .tab-text {
+                    color: rgb(13, 92, 182);
+                }
+            }
+        }
+    }
+
+    &__product {
+        display: flex;
+        flex-direction: column;
+        -webkit-box-align: center;
+        align-items: center;
+        background: white;
+        padding: 0px 0px 16px;
+        border-radius: 0px 0px 4px 4px;
+
+        .content {
+            display: flex;
+            flex-wrap: wrap;
+            align-self: stretch;
+            background-color: rgb(255, 255, 255);
+            border-top: 1px solid rgb(242, 242, 242);
+
+            .dashboard-product--item {
+                width: 16.6667%;
+            }
+        }
+
+        .view-more {
+            display: inline-block;
+            width: 240px;
+            padding: 8px 12px;
+            border-radius: 4px;
+            border: 1px solid rgb(13, 92, 182);
+            color: rgb(13, 92, 182);
+            font-size: 13px;
+            text-align: center;
+            margin-top: 12px;
+            font-weight: 500;
+        }
+
+        .view-more:hover {
+            cursor: pointer;
+            border-radius: 4px;
+            border: 1px solid rgb(13, 92, 182);
+            color: #fff;
+            background-color: rgb(13, 92, 182);
+        }
+    }
+
+    @media (max-width: 1024px) {
+        min-height: 500px;
+        background: white;
+        margin-top: 8px;
+
+        h2 {
             display: flex;
             padding: 12px;
             background-color: white;
@@ -129,9 +134,9 @@
             text-transform: capitalize;
             border-radius: 4px;
             color: rgb(56, 56, 61);
-          }
+        }
 
-          &__title-list {
+        &__title-list {
             position: sticky;
             top: 0px;
             background: rgb(239, 239, 239);
@@ -141,15 +146,17 @@
 
             .tab {
                 width: 80px;
+
                 img {
                     width: 40px;
                     height: 40px;
                 }
+
                 &-text {
                     font-size: 11px !important;
                 }
             }
-          }
+        }
 
         &__product {
             // display: flex;
@@ -159,32 +166,34 @@
             // background: white;
             // margin-bottom: 8px;
             // border-radius: 0px 0px 4px 4px;
-      
-              .content {
+
+            .content {
                 width: 100vw;
                 display: grid;
-                grid-template-columns: repeat(2,1fr);
+                grid-template-columns: repeat(2, 1fr);
                 align-self: stretch;
                 background-color: rgb(255, 255, 255);
-                
+
                 .dashboard-product--item {
                     width: 100%;
 
                     .thumbnail {
                         text-align: unset;
-                        
+
                         &--product-img img {
                             width: 100%;
                         }
                     }
                 }
+
                 a {
-                  width: 100%;
-                  border-top: 1px solid rgb(242, 242, 242);
-                  border-right: 1px solid rgb(242, 242, 242);
+                    width: 100%;
+                    border-top: 1px solid rgb(242, 242, 242);
+                    border-right: 1px solid rgb(242, 242, 242);
                 }
-              }
-              .view-more {
+            }
+
+            .view-more {
                 display: inline-block;
                 width: 100px;
                 padding: 8px 12px;
@@ -196,7 +205,199 @@
                 margin-top: 12px;
                 font-weight: 500;
                 margin-bottom: 40px;
-              }
+            }
         }
+    }
+
+    .dashboard-product--item {
+        width: 100% !important;
+        height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 8px;
+        background-color: rgb(245, 245, 250);
+
+        .product-item {
+            text-decoration: none;
+            width: 200px;
+            position: relative;
+            cursor: pointer;
+            height: 100%;
+            background-color: white;
+
+            &:hover {
+                box-shadow: rgb(0 0 0 / 10%) 0px 0px 20px;
+                z-index: 1;
+            }
+
+            &--style {
+                display: flex;
+                padding: 12px;
+                color: rgb(56, 56, 61);
+                text-decoration: none;
+                flex-direction: column;
+                -webkit-box-pack: justify;
+                width: 100%;
+                height: 100%;
+
+                .thumbnail {
+                    flex-shrink: 0;
+                    text-align: center;
+                    position: relative;
+                    width: 100%;
+
+                    &--icon-badge {
+                        bottom: 0;
+                        left: 0;
+                        display: block;
+                        position: absolute;
+                        z-index: 2;
+
+                        img {
+                            width: 136px;
+                            height: 24px;
+                        }
+                    }
+
+                    &--product-img {
+                        position: relative;
+                        width: 100%;
+                        // padding-bottom: 100%;
+                    }
+                }
+
+                .infor {
+                    .badge-service {
+                        margin-bottom: 8px;
+                        margin-top: 12px;
+                    }
+
+                    .name {
+                        display: -webkit-box;
+                        -webkit-box-orient: vertical;
+                        -webkit-line-clamp: 2;
+                        overflow: hidden;
+
+                        h3 {
+                            font-weight: 400;
+                            font-size: 12px !important;
+                            line-height: 16px;
+                            color: rgb(56, 56, 61);
+                            margin: 0px;
+                            word-break: break-word;
+                        }
+                    }
+
+                    .price-discount {
+                        display: flex;
+                        -webkit-box-align: center;
+                        align-items: center;
+                        margin-top: 4px;
+                        color: rgb(56, 56, 61);
+
+                        &__price {
+                            font-size: 16px;
+                            line-height: 24px;
+                            font-weight: 500;
+                            color: rgb(56, 56, 61);
+                        }
+                    }
+
+                    .has-discount {
+                        color: rgb(255, 66, 78);
+
+                        .price-discount__discount {
+                            padding: 0px 2px;
+                            line-height: 14px;
+                            font-size: 12px;
+                            font-weight: 400;
+                            margin-left: 8px;
+                            border: 1px solid rgb(255, 66, 78);
+                            border-radius: 2px;
+                            background-color: rgb(255, 240, 241);
+                            color: rgb(255, 66, 78);
+                        }
+                    }
+
+                    .badge-benefit {
+                        margin-top: 8px;
+                    }
+
+                    .badge-add-info {
+                        display: flex;
+                        flex-wrap: wrap;
+                        margin-top: 8px;
+                    }
+
+                    .deal {
+                        text-align: left;
+                        font-size: 16px;
+                        line-height: 24px;
+                        font-weight: 500;
+                        color: rgb(56, 56, 61);
+                        margin: 8px 0px 12px;
+                        display: flex;
+                        -webkit-box-align: center;
+                        align-items: center;
+                        white-space: nowrap;
+                    }
+
+                    .deal-quty {
+                        background-color: rgb(255, 170, 175);
+                        color: rgb(255, 255, 255);
+                        border-radius: 10px;
+                        position: relative;
+                        display: flex;
+                        width: 100%;
+                        height: 20px;
+
+                        .deal-progress {
+                            position: absolute;
+                            left: 0px;
+                            top: 0px;
+                            background-color: rgb(255, 66, 78);
+                            height: 20px;
+                            border-radius: 10px;
+                            min-width: 20px;
+
+                            width: 84%;
+
+                            span {
+                                font-size: 11px;
+                                line-height: 16px;
+                                padding: 0px 0px 0px 6px;
+                                display: flex;
+                                -webkit-box-align: center;
+                                align-items: center;
+                                -webkit-box-pack: center;
+                                justify-content: center;
+                                height: 100%;
+                                width: 100%;
+                                position: absolute;
+                                text-align: center;
+                            }
+
+                            img {
+                                z-index: 10;
+                                position: absolute;
+                                width: 24px;
+                                height: 24px;
+                                bottom: 4px;
+                                left: 5px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        @media (max-width: 1024px) {
+            width: 100%;
+            position: relative;
+        }
+    }
+
+    .not-style {
+        justify-content: space-between;
     }
 }
