--- a/src/assets/scss/products/productSummary.scss
+++ b/src/assets/scss/products/productSummary.scss
@@ -1,5 +1,5 @@
 .dashboard-product--item {
-    width: 100% !important;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -11,7 +11,6 @@
         width: 200px;
         position: relative;
         cursor: pointer;
-        height: 100%;
         background-color: white;
 
         &:hover {
@@ -70,7 +69,7 @@
 
                     h3 {
                         font-weight: 400;
-                        font-size: 12px !important  ;
+                        font-size: 12px !important;
                         line-height: 16px;
                         color: rgb(56, 56, 61);
                         margin: 0px;
@@ -191,4 +190,8 @@
 
 .not-style {
     justify-content: space-between;
+}
+
+.swiper-slide {
+    display: flex;
 }
