--- a/src/assets/scss/components/common/shopcart.scss
+++ b/src/assets/scss/components/common/shopcart.scss
@@ -91,6 +91,7 @@
                         vertical-align: middle;
                     }
                 }
+
                 span {
                     color: rgb(36, 36, 36);
                     font-weight: 400;
@@ -290,8 +291,7 @@
 
                                     .qty-decrease {
                                         display: inline-block;
-                                        border-right: 1px solid
-                                            rgb(200, 200, 200);
+                                        border-right: 1px solid rgb(200, 200, 200);
                                         color: rgb(153, 153, 153);
                                         cursor: pointer;
                                         width: 24px;
@@ -300,8 +300,7 @@
 
                                     .qty-increase {
                                         border-right: none;
-                                        border-left: 1px solid
-                                            rgb(200, 200, 200);
+                                        border-left: 1px solid rgb(200, 200, 200);
                                         cursor: pointer;
                                     }
 
@@ -405,7 +404,87 @@
                                 margin: 0px 8px;
                             }
                         }
+
+                        .address {
+                            color: rgb(128, 128, 137);
+                            font-weight: normal;
+                        }
                     }
+                }
+
+                .calculate-price {
+                    background: rgb(255, 255, 255);
+                    border-radius: 4px;
+                    padding-bottom: 8px;
+
+                    ul {
+                        list-style: none;
+                        margin: 0px;
+                        padding: 17px 20px;
+                        border-bottom: 1px solid rgb(244, 244, 244);
+
+                        li {
+                            display: flex;
+                            flex-wrap: nowrap;
+                            -webkit-box-pack: justify;
+                            justify-content: space-between;
+                            margin-bottom: 10px;
+
+                            .price-text {
+                                font-weight: 300;
+                                color: rgb(51, 51, 51);
+                                display: inline-block;
+                            }
+                        }
+                    }
+
+                    .price-total {
+                        padding: 17px 20px;
+                        display: flex;
+                        flex-wrap: nowrap;
+                        -webkit-box-pack: justify;
+                        justify-content: space-between;
+                        margin: 0px;
+
+                        span {
+                            font-weight: 300;
+                            color: rgb(51, 51, 51);
+                            display: inline-block;
+                        }
+
+                        .price-content {
+                            text-align: right;
+
+                            span {
+                                color: rgb(254, 56, 52);
+                                font-size: 22px;
+                                font-weight: 400;
+                                text-align: right;
+                            }
+
+                            .price-note {
+                                font-weight: 300;
+                                font-style: normal;
+                                display: block;
+                                font-size: 12px;
+                                color: rgb(51, 51, 51);
+                                margin-top: 3px;
+                            }
+                        }
+                    }
+                }
+
+                .btn-buy {
+                    background: rgb(255, 66, 78);
+                    color: rgb(255, 255, 255);
+                    padding: 13px 10px;
+                    text-align: center;
+                    border-radius: 4px;
+                    border: none;
+                    width: 100%;
+                    display: block;
+                    cursor: pointer;
+                    margin: 15px 0px 0px;
                 }
             }
         }
