--- a/src/assets/scss/components/common/shopcart.scss
+++ b/src/assets/scss/components/common/shopcart.scss
@@ -163,6 +163,7 @@
                     -webkit-box-align: center;
                     align-items: center;
                     border-top: 1px solid rgb(242, 242, 242);
+                    flex-direction: column;
 
                     .product-item {
                         margin-bottom: 32px;
@@ -281,38 +282,48 @@
                             .col3 {
                                 width: 130px;
                                 padding: 0px 15px;
+                                padding-left: 0px;
 
-                                .total {
+                                .count {
                                     display: inline-flex;
                                     flex-wrap: nowrap;
-                                    border: 1px solid rgb(200, 200, 200);
                                     border-radius: 3px;
                                     width: 84px;
 
-                                    .qty-decrease {
-                                        display: inline-block;
-                                        border-right: 1px solid rgb(200, 200, 200);
-                                        color: rgb(153, 153, 153);
-                                        cursor: pointer;
-                                        width: 24px;
-                                        height: 24px;
-                                    }
-
-                                    .qty-increase {
-                                        border-right: none;
-                                        border-left: 1px solid rgb(200, 200, 200);
-                                        cursor: pointer;
-                                    }
-
-                                    input {
-                                        border: none;
-                                        background: transparent;
-                                        width: 32px;
-                                        text-align: center;
-                                        font-size: 13px;
-                                        appearance: none;
-                                        margin: 0px;
-                                        outline: none;
+                                    .group-input {
+                                        display: flex;
+                                        -webkit-box-align: center;
+                                        align-items: center;
+                                        margin-top: 8px;
+                    
+                                        .enable {
+                                            cursor: pointer;
+                                            width: 30px;
+                                            background-color: rgb(255, 255, 255);
+                                            border: 1px solid rgb(236, 236, 236);
+                                        }
+                    
+                                        .disable {
+                                            cursor: pointer;
+                                            width: 30px;
+                                            background-color: rgb(255, 255, 255);
+                                            border: 1px solid rgb(236, 236, 236);
+                    
+                                            img {
+                                                opacity: 0.4;
+                                            }
+                                        }
+                    
+                                        input {
+                                            width: 40px;
+                                            border: 1px solid rgb(236, 236, 236);
+                                            height: 24px;
+                                            color: rgb(36, 36, 36);
+                                            font-size: 14px;
+                                            text-align: center;
+                                            outline: none;
+                                            transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+                                        }
                                     }
                                 }
                             }
