--- a/src/assets/scss/pages/productdetail/product.scss
+++ b/src/assets/scss/pages/productdetail/product.scss
@@ -477,11 +477,21 @@
                     align-items: center;
                     margin-top: 8px;
 
-                    button {
+                    .enable {
                         cursor: pointer;
                         width: 30px;
                         background-color: rgb(255, 255, 255);
                         border: 1px solid rgb(236, 236, 236);
+                    }
+
+                    .disable {
+                        width: 30px;
+                        background-color: rgb(255, 255, 255);
+                        border: 1px solid rgb(236, 236, 236);
+
+                        img {
+                            opacity: 0.4;
+                        }
                     }
 
                     input {
