--- a/src/assets/scss/components/common/shopcart.scss
+++ b/src/assets/scss/components/common/shopcart.scss
@@ -96,6 +96,7 @@
                     color: rgb(36, 36, 36);
                     font-weight: 400;
                     font-size: 13px;
+                    cursor: pointer;
                 }
             }
 
