--- a/src/assets/scss/pages/account/include/ordermanagement.scss
+++ b/src/assets/scss/pages/account/include/ordermanagement.scss
@@ -69,9 +69,51 @@
     display: flex;
     flex-direction: column;
     -webkit-box-align: center;
-    align-items: center;
     background-color: rgb(255, 255, 255);
     width: 100%;
     padding: 35px;
     height: 700px;
+
+    .empty-icon {
+        width: 200;
+        height: 200;
+        justify-content: center;
+    }
+    
+    .empty-order {
+        margin-top: 15px;
+        color: rgb(56, 56, 61);
+        font-size: 16px;
+        font-weight: 400;
+    }
+
+    .list-order {
+        margin-bottom: 20px;
+        margin-top: 20px;
+
+    }
+
+    .list-seperate {
+        border-bottom: 1px solid rgb(206, 206, 206);
+    }
+
+    .group-btn-order {
+        margin-bottom: 20px;
+
+        button {
+            cursor: pointer;
+            margin-right: 10px;
+            float: right;
+            padding: 10px;
+            border:none;
+            border-radius: 5px;
+            color: white;
+            background-color: rgb(80, 161, 248);
+        }
+
+        button:hover {
+            background-color: rgb(0, 121, 250);
+        }
+    }
+    
 }
